--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -48,7 +48,7 @@
     z-index: 1;
     transition: all 0.4s;
     position: fixed;
-    right: 2.3rem;
+    right: 3.5%;
     top: 1.4rem;
 
     &::before,
@@ -98,8 +98,8 @@
       gap: 1rem;
       flex-direction: column;
       position: fixed;
-      top: 5.6rem;
-      right: 1rem;
+      top: 5.3rem;
+      right: 2.5%;
       border-radius: 4px;
       font-size: 1.3rem;
       background-color: #f2f2f2;
