--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,6 +7,7 @@
 @import '../components/Logo/logo.scss';
 @import '../components/Navigation/navigation.scss';
 @import '../components/Todo/todo.scss';
+@import '../components/Message/message.scss';
 
 @import '../pages/CreateTodo/createTodo.scss';
 @import '../pages/Home/home.scss';
@@ -62,8 +63,4 @@ body {
     z-index: -1;
     opacity: 0.07;
   }
-}
-
-.message {
-  color: var(--color-red);
 }
