--- a/src/components/Container/container.scss
+++ b/src/components/Container/container.scss
@@ -1,6 +1,7 @@
 .container {
   width: 85%;
   margin: 0 auto;
+  padding-bottom: 2rem;
 
   @media screen and (max-width: $bp-medium) {
     width: 93%;
